Add Docker container and MySQL database with user-scoped persistence

--- a/.gitignore
+++ b/.gitignore
@@ -147,4 +147,5 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+.env
 # End of https://www.toptal.com/developers/gitignore/api/macos,goland
