chore: remove local .env and .idea; add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -148,4 +148,7 @@ Temporary Items
 *.icloud
 
 .env
+.env.*
+!*.example
+.idea/
 # End of https://www.toptal.com/developers/gitignore/api/macos,goland
