--- a/slc-frontend/package.json
+++ b/slc-frontend/package.json
@@ -25,5 +25,14 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.6"
+  },
+  "name": "self-learning-classifier-frontend",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview"
   }
 }
