--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,26 @@
 name: CI
-on:
-  push:
-  pull_request:
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   go:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Backend   
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - uses: actions/setup-go@v5
         with:
           go-version: '1.22'
           cache: true
 
       - name: Verify modules
-        run: go mod download
+        run: |
+          go env GOPATH GOMOD
+          go mod tidy
+          git diff --exit-code || (echo "::error ::run 'go mod tidy' locally and commit changes" && exit 1)
+          go mod download
 
       - name: Vet
         run: go vet ./...
@@ -26,3 +29,6 @@ jobs:
         run: |
           go test ./... -race -coverprofile=coverage.out -covermode=atomic
           go tool cover -func=coverage.out | tail -n +1
+
+      - name: Build
+        run: go build ./cmd/api
