--- a/Frontend/slc-frontend/package.json
+++ b/Frontend/slc-frontend/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "slc-frontend",
+  "name": "self-learning-classifier-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -25,14 +25,5 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.6"
-  },
-  "name": "self-learning-classifier-frontend",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
   }
 }
