--- a/Frontend/slc-frontend/Dockerfile
+++ b/Frontend/slc-frontend/Dockerfile
@@ -1,25 +1,18 @@
-# ---- build ----
 FROM node:20-alpine AS build
 WORKDIR /app
-
 
 COPY package.json package-lock.json* ./
 RUN npm ci
 
-
-
 COPY . .
 
-
-ARG VITE_API_URL=http://localhost:8080
-ENV VITE_API_URL=$VITE_API_URL
-
+ARG VITE_API_URL
+ENV VITE_API_URL=${VITE_API_URL:-http://localhost:8080}
 
 RUN npm run build
 
-FROM nginx:alpine
-WORKDIR /usr/share/nginx/html
-COPY --from=build /app/dist ./
+FROM nginx:1.25-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
