Fix docker-compose.yml, Dockerfile for backend and .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,74 +1,57 @@
-PORT=8080
 # =============================================================================
 # Self-Learning Classifier - Environment Configuration
 # =============================================================================
-# Copy this file to .env and fill in your actual values
+# Copy this file to .env and adjust the values if needed.
+# The defaults are pre-configured for docker-compose.
 # =============================================================================
 
 # -----------------------------------------------------------------------------
 # MySQL Database Configuration
 # -----------------------------------------------------------------------------
-# Root password for MySQL admin access
-MYSQL_ROOT_PASSWORD=change_this_root_password
+# Root password for MySQL admin access. Used only on first container startup.
+MYSQL_ROOT_PASSWORD=rootpass
 
-# Application database password
-MYSQL_PASSWORD=change_this_db_password
+# Application database password. MUST MATCH the password used by the backend.
+MYSQL_PASSWORD=slcpass
 
-# Database user (non-root)
+# Database user (non-root).
 DB_USER=slc
 
-# Database name
+# Database name.
 DB_NAME=self-learning-classifier
 
-# Database host (use 'db' for docker-compose, or IP/hostname for external DB)
+# Database host. Use 'db' for docker-compose, or 'localhost'/'127.0.0.1' for local dev.
 DB_HOST=db
 
-# Internal database port (default: 3306)
+# Internal database port inside the Docker network.
 DB_PORT=3306
 
-# External port to expose MySQL (for phpMyAdmin, DBeaver, etc.)
-# Set to different port to avoid conflicts with local MySQL
+# External port to expose MySQL on your host machine (for DBeaver, etc.).
+# Set to a different port like 3307 to avoid conflicts with local MySQL.
 DB_EXTERNAL_PORT=3307
 
 # -----------------------------------------------------------------------------
-# Backend API Configuration
+# Backend API Configuration (Go)
 # -----------------------------------------------------------------------------
-# Port where backend API will listen
+# Port where the backend API will listen inside the container and be exposed.
 BACKEND_PORT=8080
 
 # -----------------------------------------------------------------------------
-# Frontend Configuration
+# Frontend Configuration (React/Vite/Nginx)
 # -----------------------------------------------------------------------------
-# Port where frontend will be accessible
+# Port on your host machine where the frontend will be accessible.
 FRONTEND_PORT=3000
 
-# Backend API URL for frontend
-# Development: http://localhost:8080
+# URL of the backend API that the frontend will call.
+# This value is baked into the frontend image during the build.
+# For docker-compose setup, it should point to your machine's localhost and backend port.
 VITE_API_URL=http://localhost:8080
 
 # -----------------------------------------------------------------------------
-# Application Settings
+# Application Behavior Settings
 # -----------------------------------------------------------------------------
-# HTTP header name for user identification
+# HTTP header name for user identification.
 USER_ID_HEADER=X-User-ID
 
-# Cookie name for anonymous users
+# Cookie name for anonymous users.
 ANON_COOKIE_NAME=slc_uid
-
-# -----------------------------------------------------------------------------
-# Production-specific (uncomment for production deployment)
-# -----------------------------------------------------------------------------
-# GIN_MODE=release
-# TZ=UTC
-# LOG_LEVEL=info
-
-# -----------------------------------------------------------------------------
-# SSL/TLS (uncomment if using HTTPS)
-# -----------------------------------------------------------------------------
-# SSL_CERT_PATH=/path/to/cert.pem
-# SSL_KEY_PATH=/path/to/key.pem
-DB_USER=db_user
-DB_PASSWORD=db_password
-DB_HOST=db_host
-DB_PORT=db_port
-DB_NAME=self-learning-classifier
