--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${BACKEND_PORT:-8080}/api/v1/state"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:${BACKEND_PORT:-8080}/status"]
       interval: 10s
       timeout: 5s
       retries: 20
